--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css">
     <title>My Burguer</title>
   </head>
   <body>
@@ -38,4 +39,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+
 </html>
